--- a/src/Pages/Skills/Skills.module.css
+++ b/src/Pages/Skills/Skills.module.css
@@ -4,6 +4,7 @@
 	background-color: #f9f9f9;
 	color: #1d1d1d;
 	padding-bottom: 40px;
+	margin-top: 0;
 }
 
 .container {
